# az1m0v

./: .coverage  README.md  __init__.py  architecture.drawio  architecture.txt  main.py  pyproject.toml  requirements.txt  verify_tests.sh
.github/workflows/: python-package.yml
ai/: __init__.py  autopilot.py  computer_vision.py
communication/: __init__.py  can_bus.py  telemetry.py
config/: __init__.py  config.json  config_schema.json  settings.py
core/: __init__.py  battery_management.py  charging_system.py  diagnostics.py  motor_controller.py  safety_system.py  vehicle_controller.py
docs/: HARDWARE_REQUIREMENTS.md  README.md  config-parameters.md  configuration.md
logs/: faults.json
scripts/: setup.sh
scripts/integration/: __init__.py  mpu_builder.py  quectel_builder.py  simpbms_builder.py  vesc_builder.py
sensors/: __init__.py  computer_vision.py  gps.py  imu.py  temperature.py
tests/: __init__.py  conftest.py  test_computer_vision.py  test_config.py  test_core.py
tests/functional/: test_autopilot_alpamayo_functional.py  test_autopilot_integration.py  test_can_bus_integration.py  test_charging_system_integration.py  test_dashboard_integration.py  test_imu_integration.py  test_main_integration.py  test_motor_controller_integration.py  test_safety_system_integration.py  test_telemetry_integration.py  test_temperature_integration.py  test_vehicle_controller_integration.py
tests/integration/: test_main_alpamayo_integration.py
ui/: __init__.py  __main__.py  dashboard.py  deployment.py  mobile_app.py
utils/: __init__.py  count_lines.py  helpers.py
(+33 files in other folders)
