[tool.poetry]
name = "az1m0v"
version = "0.1.1"
description = "Electric Vehicle Management System"
authors = ["Dmitry Slesarev <dvslesar@gmail.com>"]
license = "GPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
jsonschema = "^4.0"
numpy = "^1.21.0"
flask = "^3.0.0"
flask-socketio = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
pytest-playwright = "^0.7.2"
playwright = "^1.57.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "playwright: marks tests as playwright tests (deselect with '-m \"not playwright\"')",
    "integration: marks tests as integration tests that may be slower or flaky",
]
